tests/implements/implements.exp
Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot implement `IFoo` [1] with `C1` because property `foo` is missing in `C1` [2] but exists in `IFoo` [1].

   test.js:5:1
   5| class C1 implements IFoo {} // error: property `foo` not found
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:5:21
   5| class C1 implements IFoo {} // error: property `foo` not found
                          ^^^^ [1]
   test.js:5:7
   5| class C1 implements IFoo {} // error: property `foo` not found
            ^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot implement `IFoo` [1] with `C2` because number [2] is incompatible with string [3] in property `foo`.

   test.js:6:1
   6| class C2 implements IFoo { foo: number } // error: number <~> string
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:6:21
   6| class C2 implements IFoo { foo: number } // error: number <~> string
                          ^^^^ [1]
   test.js:6:33
   6| class C2 implements IFoo { foo: number } // error: number <~> string
                                      ^^^^^^ [2]
   test.js:3:23
   3| interface IFoo { foo: string }
                            ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Cannot implement `IFoo` [1] with `C4` because property `foo` is missing in `C4` [2] but exists in `IFoo` [1].

   test.js:13:1
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:13:21
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                           ^^^^ [1]
   test.js:13:7
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Cannot implement `IBar` [1] with `C4` because property `bar` is missing in `C4` [2] but exists in `IBar` [1].

   test.js:13:1
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:13:27
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
                                 ^^^^ [1]
   test.js:13:7
   13| class C4 implements IFoo, IBar {} // error: properties `foo`, `bar` not found
             ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:18:1

Cannot implement `IFooBar` [1] with `C5` because:
 - property `bar` is missing in `C5` [2] but exists in `IFooBar` [1].
 - property `foo` is missing in `C5` [2] but exists in `IFoo` [1].

   test.js:18:1
   18| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:18:21
   18| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
                           ^^^^^^^ [1]
   test.js:18:7
   18| class C5 implements IFooBar {} // error: properties `foo`, `bar` not found
             ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:2

Cannot cast `new C5()` to `IBar` because property `bar` is missing in `C5` [1] but exists in `IBar` [2].

   test.js:21:2
   21| (new C5: IBar); // error: property `bar` not found (despite IBar < IFooBar)
        ^^^^^^ [1]

References:
   test.js:21:10
   21| (new C5: IBar); // error: property `bar` not found (despite IBar < IFooBar)
                ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:26:21

Cannot implement `C1` because it is not an interface.

   26| class C7 implements C1 {} // error: C1 is a class, expected an interface
                           ^^


Error ----------------------------------------------------------------------------------------------------- test.js:36:2

Cannot cast `new C9()` to `T1` because property `b` is missing in `C9` [1] but exists in `T1` [2].

   test.js:36:2
   36| (new C9: T1); // error
        ^^^^^^ [1]

References:
   test.js:36:10
   36| (new C9: T1); // error
                ^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:42:1

Cannot implement `I2` [1] with `C10` because property `b` is missing in `C10` [2] but exists in `I2` [1].

   test.js:42:1
       v---------------------------------
   42| class C10 implements I2 { // error
   43|   a: string
   44| }
       ^

References:
   test.js:42:22
   42| class C10 implements I2 { // error
                            ^^ [1]
   test.js:42:7
   42| class C10 implements I2 { // error
             ^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:55:1

Cannot implement `I3` [1] with `C11c` because property `a` is missing in `C11c` [2] but exists in `I3` [1].

   test.js:55:1
   55| class C11c implements I3 {} // error
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:55:23
   55| class C11c implements I3 {} // error
                             ^^ [1]
   test.js:55:7
   55| class C11c implements I3 {} // error
             ^^^^ [2]



Found 11 errors
